# fastapi__template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pull_request_template.md  pyproject.toml
apps/admin/: admin.py
apps/admin/methods/: func_util_methods.py
apps/authentication/: admin.py  app.py
apps/authentication/constants/: token_constants.py
apps/authentication/methods/: api_key_util_methods.py  password_util_methods.py  token_util_methods.py
apps/authentication/models/: api_key.py  blacklisted_token.py  outstanding_token.py
apps/authentication/tests/: api_key_model_test.py  api_key_util_methods_test.py  password_util_methods_test.py
apps/common/: app.py
apps/common/methods/: func_util_methods.py
apps/common/models/: base_model.py  validation_sql_model.py  validation_sqlmodel.py
apps/common/tests/: base_model_test.py  base_test.py  health_check_views_test.py  test_health_check_views.py  validation_sqlmodel_test.py
apps/common/views/: health_check_views.py
apps/users/: admin.py  app.py
apps/users/models/: user.py
fastapi__template/: app.py  database.py  dependencies.py  load_env.py  settings.py  test_setup.py
fastapi__template/admin/: base_admin_views.py  query_helper.py  site.py
fastapi__template/admin/methods/: func_util_methods.py
fastapi__template/dependencies/: database.py  initializers.py  load_env.py
fastapi__template/env_files/: .env.rename
fastapi__template/migrations/: alembic.ini  env.py
fastapi__template/scripts/: makemigration.py  migrate.py  runserver.py
fastapi__template/test/: __init__.py  conftest.py  test_case.py  test_constants.py  test_setup.py
scripts/: lint.sh
