[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "Template for fastapi projects"
authors = ["Juan Trujillo <juantrujillo.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
